corrected: layout bug

--- a/client/src/features/projects/components/sprint-header/_sprint-header.scss
+++ b/client/src/features/projects/components/sprint-header/_sprint-header.scss
@@ -1,7 +1,7 @@
 .sprint-header {
     display: flex;
     gap: 1rem;
-    z-index: 1;
+    z-index: .5;
     position: relative;
     &__title {
         margin-right: auto;
