--- a/client/src/shared/components/modal-overlay/_modal-overlay.scss
+++ b/client/src/shared/components/modal-overlay/_modal-overlay.scss
@@ -1,5 +1,5 @@
 .modal-overlay {
-    background-color: rgba($color: #000000, $alpha: 0.05);
+    background-color: rgba($color: #020202, $alpha: .05);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 3;
+    z-index: 10000;
 
     overflow: hidden;
 }
